[project]
name = "cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Carl Csaposs", email = "carl.csaposs@canonical.com"}
]
readme = "README.md"
requires-python = ">=3.10"  # TODO: bump to >=3.12 when arm runners move to 24.04. enum.StrEnum requires >=3.11
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "uritemplate>=4.1.1",
    "charmcraftcache>=0.6.2"
]

[project.scripts]
collect-charms = "cli.collect_charms:main"
collect-platforms = "cli.collect_platforms:main"
build = "cli.build:main"
release = "cli.release:main"
add-charm = "cli.add_charm_branch:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP"]
